    * 0906 FIX: Improved transaction handling in Web GUI...
    * 0909 FIX: Table checkboxes: Fixed bug where selected checkboxes got ignored...
    * 0811 FIX: Fixed handling of exceptions occuring before login in debug mode
    * 0912 FIX: Multisite Views: Fixed bug where custom views could not get deleted

    WATO:
    * 0784 Improved security of WATO bulk inventory by using transaction ids
    * 0880 Added support for 389 Directory Server to LDAP connector
    * 0607 online help text for host creation in WATO now also explains hostname caching
    * 0908 Check event state: New option "Less Verbose Output"...
    * 0965 Cumulative permissions and contact groups for WATO folders...
    * 0973 Renaming of hosts via WATO...
    * 0976 Show preview of active and custom checks in WATO services table...
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
    * 0904 FIX: Fixed exception in host parameter overview...
    * 0971 FIX: Fix missing authentication of PHP addons in D-WATO when activation mode is reload...
    * 0972 FIX: Do not loose site specific global settings anymore when chaning a site's configuration...

    Notifications:
    * 0754 Allow users to disable their notifications completely...
    * 0755 Added variables LASTHOSTUP_REL and LASTSERVICEOK_REL to notification context...
    * 0883 Added Date / Time to HTML notification email
    * 0900 notify_multitech.py: new treasures script for notifying via MultiTech SMS Gateway...
    * 0968 Notification scripts are now configurable via WATO...
    * 0974 New notification plugin for ASCII emails...
    * 0752 FIX: FIX: compute correct state transitions for notifications...
    * 0753 FIX: FIX: correctly show original state in HTML notification mails...
    * 0609 FIX: mail notification script now uses 6 digit hex codes for colors to be better compatible with web based mail browsers
    * 0964 FIX: Fix hanging shutdown of CMC on RedHat 5.X...