@@ -93,6 +93,7 @@
     * 0909 FIX: Table checkboxes: Fixed bug where selected checkboxes got ignored...
     * 0811 FIX: Fixed handling of exceptions occuring before login in debug mode
     * 0912 FIX: Multisite Views: Fixed bug where custom views could not get deleted
+    * 0921 FIX: dashboards: fixed bug not updating header timestamp...
 
     WATO:
     * 0784 Improved security of WATO bulk inventory by using transaction ids
